opam-version: "2.0"
maintainer: "ilias.gar@gmail.com"
authors: ["Ilias Garnier"]
homepage: "https://github.com/igarnier/ssh-client"
bug-reports: "https://github.com/igarnier/ssh-client/issues"
dev-repo: "git+https://github.com/igarnier/ssh-client"
license: "MIT"
build: [
  ["dune" "build" "-p" name "-j" jobs]
]
depends: [
  "ocaml"       {>= "4.08"}
  "dune"        {build & >= "1.0"}
  "containers"  {>= "3.0.1"}
  "conf-libssh" { = "dev" }
]
description: "SSH client library"
pin-depends: [
  ["conf-libssh.dev" "git+https://gitlab.com/dannywillems/ocaml-conf-libssh.git#ee8fa14eefd30071aff48d3a550c4cf4d0ed8cd0"]
]
